@@ -25,6 +25,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* Fix runtime attach with some docker images - {pull}2385[#2385]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
